--- a/FixIt/app/src/main/res/layout/activity_profile.xml
+++ b/FixIt/app/src/main/res/layout/activity_profile.xml
@@ -62,10 +62,10 @@
 
             <TextView
                 android:id="@+id/profile_name"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="User Name"
+                android:text="User Name mazakaza"
                 android:textColor="@color/smoke_green"
                 android:textSize="30sp"
                 android:textStyle="bold"
@@ -82,10 +82,12 @@
                 android:text="\@userUsername"
                 android:textColor="@color/peach"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/profile_name"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/profile_name"
-                app:layout_constraintTop_toBottomOf="@+id/profile_name" />
+                app:layout_constraintTop_toBottomOf="@+id/profile_name"
+                app:layout_constraintVertical_bias="0.207" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.cardview.widget.CardView
