--- a/FixIt/app/src/main/res/layout/activity_main.xml
+++ b/FixIt/app/src/main/res/layout/activity_main.xml
@@ -1,41 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:gravity="center"
-    android:background="@drawable/background_final"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/drawer">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:text="Welcome to Fix It"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="50dp"
-        android:background="@drawable/button_back"
-        android:textAlignment="center"
+        android:layout_height="match_parent"
+        tools:context=".MainActivity"
         android:gravity="center"
-        android:textColor="@color/dark_green"
-        android:textSize="38sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:background="@drawable/background_final"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView"
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:text="Welcome to Fix It"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="30dp"
+            android:background="@drawable/button_back"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:textColor="@color/dark_green"
+            android:textSize="28sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Click here to start Scanning"
+            android:textSize="20sp"
+            android:textColor="@color/peach"
+            android:textStyle="bold"
+            android:onClick="startScanning"/>
+
+
+    </LinearLayout>
+    <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Click here to start Scanning"
-        android:textSize="20sp"
-        android:textColor="@color/peach"
-        android:textStyle="bold"
-        android:onClick="startScanning"/>
+        android:layout_height="match_parent"
+        android:id="@+id/nav_view"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/navigation_header"
+        app:menu="@menu/navigation_menu">
 
-
-</LinearLayout>
+    </com.google.android.material.navigation.NavigationView>
+</androidx.drawerlayout.widget.DrawerLayout>
