--- a/FixIt/app/src/main/res/layout/activity_preview.xml
+++ b/FixIt/app/src/main/res/layout/activity_preview.xml
@@ -5,42 +5,259 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PreviewActivity"
-    android:background="@drawable/background_final">
+    android:background="@drawable/background_final"
+    android:padding="10dp">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="2dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/ic_camera" />
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/tvResults"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="save"
-            android:background="@color/lime_green"/>
+            android:background="@color/smoke_green"
+            android:gravity="center"
+            android:padding="20dp"
+            android:text="@string/preview_results"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="cancel"
-            android:background="#D8FE0000"/>
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/create_a_concern"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/lime_green"
+                android:text="@string/create_a_concern" />
+
+            <Button
+                android:id="@+id/retry"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#BEFE8700"
+                android:text="@string/retry" />
+        </LinearLayout>
+
+
     </LinearLayout>
+
+<!--    <ScrollView-->
+<!--        android:id="@+id/scrollView2"-->
+<!--        android:layout_width="379dp"-->
+<!--        android:layout_height="355dp"-->
+<!--        android:background="@color/smoke_green"-->
+<!--        android:padding="8dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        tools:visibility="visible">-->
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="vertical">-->
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:orientation="horizontal">-->
+
+<!--                <ImageButton-->
+<!--                    android:id="@+id/imageButton"-->
+<!--                    android:layout_width="50dp"-->
+<!--                    android:layout_height="50dp"-->
+<!--                    android:layout_weight="0"-->
+<!--                    app:srcCompat="@drawable/ic_baseline_close_24"-->
+<!--                    android:backgroundTint="@color/peach"/>-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/textView"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:gravity="center"-->
+<!--                    android:text="create a new concern"-->
+<!--                    android:textColor="@color/dark_green"-->
+<!--                    android:textSize="22sp"-->
+<!--                    android:textStyle="bold" />-->
+<!--            </LinearLayout>-->
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:orientation="horizontal">-->
+
+<!--                <TextView-->
+<!--                    android:layout_width="120dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="0"-->
+<!--                    android:text="City's Account No. :"-->
+<!--                    android:layout_marginEnd="5dp"-->
+<!--                    android:textColor="@color/dark_green"/>-->
+
+<!--                <EditText-->
+<!--                    android:id="@+id/city_account_number"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="40dp"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:ems="10"-->
+<!--                    android:hint="City of Tshwane account number"-->
+<!--                    android:textSize="16sp"-->
+<!--                    android:inputType="number"-->
+<!--                    android:background="@drawable/bottom_line" />-->
+
+<!--            </LinearLayout>-->
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:orientation="horizontal"-->
+<!--                android:layout_marginTop="10dp">-->
+
+<!--                <TextView-->
+<!--                    android:layout_width="120dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="0"-->
+<!--                    android:text="Fix date :"-->
+<!--                    android:layout_marginEnd="5dp"-->
+<!--                    android:textColor="@color/dark_green"/>-->
+
+<!--                <EditText-->
+<!--                    android:id="@+id/fix_date"-->
+<!--                    android:layout_width="174dp"-->
+<!--                    android:layout_height="40dp"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:background="@drawable/bottom_line"-->
+<!--                    android:hint="dd-mm-yyyy"-->
+<!--                    android:inputType="date"-->
+<!--                    android:textSize="16sp"-->
+<!--                    android:paddingStart="5dp"/>-->
+
+<!--            </LinearLayout>-->
+
+
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:orientation="horizontal"-->
+<!--                android:layout_marginTop="10dp">-->
+
+<!--                <TextView-->
+<!--                    android:layout_width="120dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="0"-->
+<!--                    android:text="Alt Contact :"-->
+<!--                    android:layout_marginEnd="5dp"-->
+<!--                    android:textColor="@color/dark_green"/>-->
+
+<!--                <EditText-->
+<!--                    android:id="@+id/contact"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="40dp"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:ems="10"-->
+<!--                    android:hint="Alternative Contact"-->
+<!--                    android:textSize="16sp"-->
+<!--                    android:inputType="number"-->
+<!--                    android:background="@drawable/bottom_line" />-->
+
+<!--            </LinearLayout>-->
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                android:orientation="vertical"-->
+<!--                android:background="@drawable/bottom_line">-->
+
+<!--                <TextView-->
+<!--                    android:layout_width="120dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginEnd="5dp"-->
+<!--                    android:layout_weight="0"-->
+<!--                    android:text="Type:"-->
+<!--                    android:textColor="@color/dark_green" />-->
+
+
+<!--                <RadioGroup-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_weight="0"-->
+<!--                    android:layout_margin="5dp"-->
+<!--                    android:orientation="horizontal">-->
+
+<!--                    <RadioButton-->
+<!--                        android:id="@+id/radioButton"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="50dp"-->
+<!--                        android:text="Above ground"-->
+<!--                        android:layout_weight="1" />-->
+
+<!--                    <RadioButton-->
+<!--                        android:id="@+id/radioButton3"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="50dp"-->
+<!--                        android:text="Underground"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:layout_marginStart="5dp"/>-->
+<!--                </RadioGroup>-->
+
+<!--            </LinearLayout>-->
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                android:orientation="vertical"-->
+<!--                android:background="@drawable/bottom_line">-->
+
+<!--                <TextView-->
+<!--                    android:layout_width="120dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginEnd="5dp"-->
+<!--                    android:layout_weight="0"-->
+<!--                    android:text="Emergency Level :"-->
+<!--                    android:textColor="@color/dark_green" />-->
+
+<!--                <SeekBar-->
+<!--                    android:id="@+id/seekBar"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="50dp"-->
+<!--                    android:layout_weight="0"/>-->
+
+
+<!--            </LinearLayout>-->
+
+<!--        </LinearLayout>-->
+
+
+<!--    </ScrollView>-->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
