--- a/FixIt/app/src/main/res/layout/activity_sign_up.xml
+++ b/FixIt/app/src/main/res/layout/activity_sign_up.xml
@@ -28,7 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
-                android:text="Sign Up"
+                android:text="@string/sign_up"
                 android:textAlignment="center"
                 android:textColor="@color/peach"
                 android:textSize="36sp"
@@ -50,12 +50,13 @@
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:background="@drawable/bottom_line"
-                        android:drawableLeft="@drawable/ic_baseline_email_24"
+                        android:drawableStart="@drawable/ic_baseline_email_24"
                         android:drawablePadding="8dp"
-                        android:hint="Email"
+                        android:hint="@string/email"
+                        android:inputType="textEmailAddress"
                         android:padding="8dp"
                         android:textColor="@color/dark_green"
-                        android:inputType="textEmailAddress" />
+                        android:importantForAutofill="no" />
 
                     <EditText
                         android:id="@+id/signup_name"
@@ -63,12 +64,13 @@
                         android:layout_height="50dp"
                         android:layout_marginTop="20dp"
                         android:background="@drawable/bottom_line"
-                        android:drawableLeft="@drawable/ic_baseline_person_24"
+                        android:drawableStart="@drawable/ic_baseline_person_24"
                         android:drawablePadding="8dp"
-                        android:hint="Name"
+                        android:hint="@string/name"
+                        android:inputType="textPersonName"
                         android:padding="8dp"
                         android:textColor="@color/dark_green"
-                        android:inputType="textPersonName"/>
+                        android:autofillHints="" />
 
 
                     <EditText
@@ -77,11 +79,13 @@
                         android:layout_height="50dp"
                         android:layout_marginTop="20dp"
                         android:background="@drawable/bottom_line"
-                        android:drawableLeft="@drawable/ic_username"
+                        android:drawableStart="@drawable/ic_username"
                         android:drawablePadding="8dp"
-                        android:hint="Username"
+                        android:hint="@string/username"
                         android:padding="8dp"
-                        android:textColor="@color/dark_green" />
+                        android:textColor="@color/dark_green"
+                        android:importantForAutofill="no"
+                        android:inputType="text" />
 
                     <EditText
                         android:id="@+id/signup_password"
@@ -89,49 +93,57 @@
                         android:layout_height="50dp"
                         android:layout_marginTop="20dp"
                         android:background="@drawable/bottom_line"
-                        android:drawableLeft="@drawable/ic_password"
+                        android:drawableStart="@drawable/ic_password"
                         android:drawablePadding="8dp"
-                        android:hint="New password"
+                        android:hint="@string/new_password"
+                        android:inputType="textPassword"
                         android:padding="8dp"
                         android:textColor="@color/dark_green"
-                        android:inputType="textPassword" />
+                        android:importantForAutofill="no" />
 
                     <TextView
+                        android:id="@+id/signup_upper"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="At least 1 upper case"
-                        android:textSize="12dp"
-                        android:paddingStart="10dp"
                         android:layout_marginTop="8dp"
+                        android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
+                        android:text="@string/at_least_1_upper_case"
                         android:textColor="@color/peach"
-                        android:id="@+id/signup_upper"/>
+                        android:textSize="12sp" />
+
                     <TextView
+                        android:id="@+id/signup_lower"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="At least 1 lower case"
-                        android:textSize="12dp"
-                        android:paddingStart="10dp"
                         android:layout_marginTop="8dp"
+                        android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
+                        android:text="@string/at_least_1_lower_case"
                         android:textColor="@color/peach"
-                        android:id="@+id/signup_lower"/>
+                        android:textSize="12sp" />
+
                     <TextView
+                        android:id="@+id/signup_digit"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="At least 1 number "
-                        android:textSize="12dp"
-                        android:paddingStart="10dp"
                         android:layout_marginTop="8dp"
+                        android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
+                        android:text="@string/at_least_1_number"
                         android:textColor="@color/peach"
-                        android:id="@+id/signup_digit"/>
+                        android:textSize="12sp" />
+
                     <TextView
+                        android:id="@+id/signup_charCounter"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="At least 8 characters"
-                        android:textSize="12dp"
-                        android:paddingStart="10dp"
                         android:layout_marginTop="8dp"
+                        android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
+                        android:text="@string/at_least_8_characters"
                         android:textColor="@color/peach"
-                        android:id="@+id/signup_charCounter"/>
+                        android:textSize="12sp" />
 
                     <EditText
                         android:id="@+id/signup_confirm_password"
@@ -139,12 +151,13 @@
                         android:layout_height="50dp"
                         android:layout_marginTop="20dp"
                         android:background="@drawable/bottom_line"
-                        android:drawableLeft="@drawable/ic_password"
+                        android:drawableStart="@drawable/ic_password"
                         android:drawablePadding="8dp"
-                        android:hint="Confirm password"
+                        android:hint="@string/confirm_password"
+                        android:inputType="textPassword"
                         android:padding="8dp"
                         android:textColor="@color/dark_green"
-                        android:inputType="textPassword" />
+                        android:importantForAutofill="no" />
 
                     <TextView
                         android:id="@+id/signup_validate"
@@ -152,9 +165,10 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:paddingStart="10dp"
-                        android:text="Password doesn't match..."
+                        android:paddingEnd="10dp"
+                        android:text="@string/password_does_not_match"
                         android:textColor="@color/peach"
-                        android:textSize="12dp"
+                        android:textSize="12sp"
                         tools:visibility="gone" />
 
                     <Button
@@ -163,17 +177,18 @@
                         android:layout_marginTop="30dp"
                         android:background="@drawable/smole_green_background"
                         android:onClick="createUser"
-                        android:text="Sign Up"
+                        android:text="@string/sign_up"
                         android:textColor="@color/dark_green"
-                        android:textSize="18dp" />
+                        android:textSize="18sp" />
 
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
                         android:layout_marginTop="20dp"
                         android:layout_weight="1"
+                        android:gravity="center"
                         android:onClick="openSignIn"
-                        android:text="Already a user? Login"
+                        android:text="@string/already_a_user_login"
                         android:textAlignment="center"
                         android:textColor="@color/peach"
                         android:textSize="16sp" />
