--- a/FixIt/app/src/main/res/layout/activity_main.xml
+++ b/FixIt/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical"
     android:id="@+id/drawer">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,6 +17,7 @@
         android:background="@drawable/background_final"
         android:orientation="vertical">
 
+        <include layout="@layout/toolbar"/>
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fragmentContainerView"
