--- a/FixIt/app/src/main/res/layout/activity_sign_up.xml
+++ b/FixIt/app/src/main/res/layout/activity_sign_up.xml
@@ -169,12 +169,19 @@
                         android:text="@string/password_does_not_match"
                         android:textColor="@color/peach"
                         android:textSize="12sp"
-                        tools:visibility="gone" />
+                        tools:visibility="visible" />
+
+                    <ProgressBar
+                        android:id="@+id/progress_bar"
+                        android:visibility="invisible"
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp"
+                        android:layout_margin="5dp"
+                        android:layout_gravity="center"/>
 
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
-                        android:layout_marginTop="30dp"
                         android:background="@drawable/smole_green_background"
                         android:onClick="createUser"
                         android:text="@string/sign_up"
