--- a/FixIt/app/src/main/res/layout/activity_create_concern.xml
+++ b/FixIt/app/src/main/res/layout/activity_create_concern.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CreateConcernActivity"
-    >
+    tools:context=".CreateConcernActivity">
 
-   <include layout="@layout/toolbar"/>
+   <include android:id="@+id/toolbar"
+       layout="@layout/toolbar"/>
 
     <ScrollView
         android:id="@+id/scrollView2"
