--- a/FixIt/app/src/main/res/layout/activity_preview.xml
+++ b/FixIt/app/src/main/res/layout/activity_preview.xml
@@ -7,6 +7,9 @@
     tools:context=".PreviewActivity"
     android:background="@drawable/background_final"
     android:padding="10dp">
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"/>
 
     <ImageView
         android:id="@+id/imageView"
@@ -16,7 +19,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/ic_camera" />
 
@@ -29,17 +32,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
-
-        <TextView
-            android:id="@+id/tvResults"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/smoke_green"
-            android:gravity="center"
-            android:padding="20dp"
-            android:text="@string/preview_results"
-            android:textSize="25sp"
-            android:textStyle="bold" />
 
         <LinearLayout
             android:id="@+id/linearLayout"
