--- a/FixIt/app/src/main/res/layout/activity_profile.xml
+++ b/FixIt/app/src/main/res/layout/activity_profile.xml
@@ -7,88 +7,19 @@
     android:background="@color/lime_green"
     tools:context=".ProfileActivity">
 
+    <include
+        android:id="@+id/include"
+        layout="@layout/toolbar" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/background_final"
+        android:layout_height="0dp"
+        android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="213dp"
-            android:background="#4CF3FCF2">
-
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/profile_card_image"
-                android:layout_width="113dp"
-                android:layout_height="128dp"
-                android:layout_marginStart="20dp"
-                app:cardCornerRadius="70dp"
-                app:cardElevation="40dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <ImageButton
-                    android:id="@+id/profile_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/image_background"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:srcCompat="@tools:sample/avatars" />
-
-            </androidx.cardview.widget.CardView>
-
-            <TextView
-                android:id="@+id/label_hello"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:text="Hello"
-                android:textColor="@color/smoke_green"
-                android:textSize="26sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/profile_card_image"
-                app:layout_constraintStart_toEndOf="@+id/profile_card_image"
-                app:layout_constraintTop_toTopOf="@+id/profile_card_image"
-                app:layout_constraintVertical_bias="0.122" />
-
-            <TextView
-                android:id="@+id/profile_name"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="User Name mazakaza"
-                android:textColor="@color/smoke_green"
-                android:textSize="30sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/label_hello"
-                app:layout_constraintTop_toBottomOf="@+id/label_hello" />
-
-            <TextView
-                android:id="@+id/profile_username"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="\@userUsername"
-                android:textColor="@color/peach"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/profile_name"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/profile_name"
-                app:layout_constraintTop_toBottomOf="@+id/profile_name"
-                app:layout_constraintVertical_bias="0.207" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintTop_toBottomOf="@+id/include">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -110,6 +41,13 @@
                     android:orientation="vertical"
                     android:padding="15dp">
 
+                    <ProgressBar
+                        android:id="@+id/progress_bar"
+                        style="?android:attr/progressBarStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        tools:visibility="gone" />
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -123,21 +61,23 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="2"
                             android:padding="10dp"
-                            android:text="Password"
+                            android:text="@string/name"
                             android:textColor="@color/dark_green"
                             android:textSize="14sp"
                             android:textStyle="bold" />
 
-                        <TextView
-                            android:id="@+id/profile_password_redirect"
+                        <EditText
+                            android:id="@+id/edit_profile_name"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="50dp"
                             android:layout_weight="1"
                             android:padding="10dp"
-                            android:text="change"
+                            android:hint="Enter your full name"
                             android:textAlignment="textEnd"
-                            android:textColor="@color/peach"
-                            android:textSize="14sp" />
+                            android:textColor="@color/dark_green"
+                            android:textSize="14sp"
+                            android:inputType="textPersonName"/>
+
 
                     </LinearLayout>
 
@@ -159,23 +99,26 @@
                             android:textSize="14sp"
                             android:textStyle="bold" />
 
-                        <TextView
-                            android:id="@+id/profile_contact"
+                        <EditText
+                            android:id="@+id/edit_profile_contact"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="50dp"
                             android:layout_weight="1"
                             android:padding="10dp"
-                            android:text="000-000-0000"
+                            android:hint="000-000-0000"
+                            android:ems="10"
+                            android:inputType="phone"
                             android:textAlignment="textEnd"
                             android:textColor="@color/dark_green"
                             android:textSize="14sp" />
 
                     </LinearLayout>
 
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
+                        android:gravity="center"
                         android:layout_marginBottom="10dp"
                         android:background="@drawable/bottom_line"
                         android:orientation="horizontal">
@@ -183,7 +126,47 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_weight="3"
+                            android:padding="10dp"
+                            android:text="Date of birth"
+                            android:textColor="@color/dark_green"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/profile_dob"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
                             android:layout_weight="2"
+                            android:padding="10dp"
+                            android:gravity="end"
+                            android:hint="@string/date_type"
+                            android:paddingStart="5dp"
+                            android:paddingEnd="5dp"
+                            android:textSize="16sp" />
+
+                        <ImageButton
+                            android:id="@+id/dob_date_picker"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:layout_weight="0"
+                            android:background="@drawable/image_button_background"
+                            android:src="@drawable/ic_calendar_today" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:layout_marginBottom="10dp"
+                        android:background="@drawable/bottom_line"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="5"
                             android:padding="10dp"
                             android:text="Email"
                             android:textColor="@color/dark_green"
@@ -191,44 +174,16 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/profile_email"
+                            android:id="@+id/edit_profile_email"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="50dp"
                             android:layout_weight="1"
                             android:padding="10dp"
-                            android:text="userEmail@fixit.gov"
+                            android:gravity="center_vertical"
                             android:textAlignment="textEnd"
-                            android:textColor="@color/dark_green"
-                            android:textSize="14sp" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginBottom="10dp"
-                        android:background="@drawable/bottom_line"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="2"
-                            android:padding="10dp"
-                            android:text="Address"
-                            android:textColor="@color/dark_green"
-                            android:textSize="14sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/profile_address_redirect"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:padding="10dp"
-                            android:text="No Address"
-                            android:textAlignment="textEnd"
+                            android:drawableEnd="@drawable/ic_complete_tasks"
+                            android:drawablePadding="5dp"
+                            android:text="@string/user_email_hint"
                             android:textColor="@color/dark_green"
                             android:textSize="14sp" />
 
@@ -240,7 +195,7 @@
                         android:layout_margin="18dp"
                         android:background="@drawable/clickable_peach_button"
                         android:onClick="editProfile"
-                        android:text="Edit Profile" />
+                        android:text="Update Profile" />
 
                 </LinearLayout>
 
