--- a/FixIt/app/src/main/res/layout/fragment_profile.xml
+++ b/FixIt/app/src/main/res/layout/fragment_profile.xml
@@ -18,7 +18,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="213dp"
+            android:layout_height="233dp"
             android:background="#94F3FCF2">
 
 
@@ -26,22 +26,28 @@
                 android:id="@+id/profile_card_image"
                 android:layout_width="113dp"
                 android:layout_height="128dp"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="16dp"
                 app:cardCornerRadius="70dp"
                 app:cardElevation="40dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.333">
 
                 <ImageButton
                     android:id="@+id/profile_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
                     android:background="@drawable/image_background"
+                    android:src="@drawable/ic_add_a_photo"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:srcCompat="@tools:sample/avatars" />
+                    tools:srcCompat="@tools:sample/avatars"
+                    android:layout_gravity="center"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitCenter"/>
+
 
             </androidx.cardview.widget.CardView>
 
@@ -66,7 +72,7 @@
                 android:layout_marginTop="8dp"
                 android:text="User Name mazakaza"
                 android:textColor="@color/dark_green"
-                android:textSize="30sp"
+                android:textSize="40sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -74,20 +80,27 @@
                 app:layout_constraintTop_toBottomOf="@+id/label_hello" />
 
             <TextView
-                android:id="@+id/profile_username"
+                android:id="@+id/profile_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="\@userUsername"
+                android:layout_marginTop="9dp"
+                android:layout_marginBottom="16dp"
+                android:text="@string/useremail"
                 android:textColor="@color/peach"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/profile_name"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/profile_name"
-                app:layout_constraintTop_toBottomOf="@+id/profile_name"
-                app:layout_constraintVertical_bias="0.207" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/profile_name" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -184,18 +197,18 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="2"
                             android:padding="10dp"
-                            android:text="Email"
+                            android:text="Age"
                             android:textColor="@color/dark_green"
                             android:textSize="14sp"
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/profile_email"
+                            android:id="@+id/profile_age"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:padding="10dp"
-                            android:text="userEmail@fixit.gov"
+                            android:text="18+"
                             android:textAlignment="textEnd"
                             android:textColor="@color/dark_green"
                             android:textSize="14sp" />
@@ -234,11 +247,11 @@
                     </LinearLayout>
 
                     <Button
+                        android:id="@+id/btnEditProfile"
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
                         android:layout_margin="18dp"
                         android:background="@drawable/clickable_peach_button"
-                        android:onClick="editProfile"
                         android:text="Edit Profile" />
 
                 </LinearLayout>
@@ -246,7 +259,6 @@
             </ScrollView>
 
         </androidx.cardview.widget.CardView>
-
 
     </LinearLayout>
 
